---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 31 May 2022
  Bugfixes:
    - Fixed decoratives spawning on shallow water
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 30 May 2022
  Changes:
    - Increased default chance of trees dropping seeds from 2% to 4%
  Bugfixes:
    - Fixed crash when loading without Canal Builder
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 30 May 2022
  Features:
    - Initial release