@@ -2,6 +2,7 @@
 Version: 1.0.2
 Date: 31 May 2022
   Bugfixes:
+    - Fixed X-Logistics Default map preset unintentionally changing trees and enemy bases
     - Fixed decoratives spawning on shallow water
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
